fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,13 @@ body {
   color: white;
   margin: 0;
 }
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; /* Prevent horizontal scrolling */
+  width: 100vw;
+}
+
 
 .navbar {
   width: 100vw;
