--- a/src/AppMobile.css
+++ b/src/AppMobile.css
@@ -1,3 +1,11 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+    width: 100vw;
+
+  }
+  
 /* Phones (max-width: 600px) */
 @media only screen and (max-width: 600px) {
   /* General font size adjustment */
